Wed Jun 29 07:56:54 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * ace/config-lynxos.h:
          Added ACE_LACKS_STD_WSTRING to remedy compile problems with new
          CDR stream ops in TAO.

Thu Jun 23 14:51:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CE_Screen_Output.h:
        * ace/Log_Msg.cpp:
        * netsvcs/clients/Logger/direct_logging.cpp:
        * netsvcs/clients/Logger/indirect_logging.cpp:
        * netsvcs/lib/Base_Optimizer.h:
        * netsvcs/lib/Base_Optimizer.cpp:
        * netsvcs/lib/Client_Logging_Handler.cpp:
        * netsvcs/lib/Log_Message_Receiver.h:
        * netsvcs/lib/Log_Message_Receiver.cpp:
        * netsvcs/lib/Server_Logging_Handler.cpp:
        * netsvcs/lib/Server_Logging_Handler_T.cpp:
        * netsvcs/lib/TS_Clerk_Handler.cpp:
        * netsvcs/lib/TS_Server_Handler.cpp:
        * netsvcs/lib/Time_Request_Reply.cpp:
        * netsvcs/lib/lib.mpc:
        * netsvcs/servers/README:
        * netsvcs/servers/main.cpp:
          Layout and typo fixes

Thu Jun 23 14:29:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          libtool

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
          Make x.0.3 available

Thu Jun 23 12:39:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen
          Disable html help, seems doxygen now disables the search option
          when html help is enabled

Thu Jun 23 13:46:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.3 released.

Wed Jun 22 18:01:15 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * Basic_Types.h:
        * CDR_Base.cpp:
        * CDR_Base.h:
        * config-win32-mingw.h:

          Reverted all changes made related to support for long double
          constants in IDL.

Tue Jun 21 18:14:46 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:
